# boost-and-broadside

./: .gitignore  CLEANUP_LOG.md  Cargo.toml  README.md  ROADMAP.md  STYLE_GUIDE.md  WARP.md  architecture_diagram.md  check_debug_h5.py  check_h5.py  check_imports.py  create_debug_data.py  create_debug_dataset.py  debug_hydra.py  debug_import.py  eval_rollout_metrics.csv  hydra_integration_plan.md  hydra_integration_summary.md  implementation_details.md  main.py  pyproject.toml  pytest.ini  relational_features_head.py  repro_dtype.py  requirements.md  test_hydra_integration.py  test_output.txt  verify_data_loading.py
.claude/: settings.local.json
bc_20251011_215925_bc_checkpoints/: config.yaml
bc_20251011_220005_bc_checkpoints/: config.yaml
configs/: config.yaml  config_test.yaml
docs/: game_design.md  learning_rates.csv  mamba_bb.md  world_model_architecture.md  wsl_agent.md
old_code/: main.py
proposals/: data_pipeline_refactor.md
runs/: __init__.py  bc.py  bc_warmstart.py  rl.py  rl_hpc.py  rl_obstacles.py  shared.py
src/: agent_manager.py  agents.py  bc_training.py  callbacks.py  cli_args.py  collect_data.py  components.rs  config.py  data_aggregator.py  data_collector.py  derive_ship_parameters.py  env.py  game_coordinator.py  game_runner.py  inspect_data.py  main.rs  model_utils.py  parallel_rl_wrapper.py  parallel_utils.py  playback_agent.py  recovery_manager.py  renderer.py  rl_wrapper.py  scripted_agent.py  ship.py  state.py  team_transformer_model.py  transformer_policy.py  utils.py
test_run_bc_checkpoints/: config.yaml
tests/: conftest.py  reproduce_mamba_inference.py  reproduce_wm_inference.py  test_action_shift.py  test_agents_integration.py  test_checkpoint_loading.py  test_cli_args.py  test_config.py  test_data_aggregator.py  test_data_formats.py  test_environment_basics.py  test_environment_combat.py  test_environment_physics.py  test_fix_h_death_masking.py  test_game_runner.py  test_gym_compliance.py  test_main_interface.py  test_mamba_echo.py  test_model_utils.py  test_normalizer.py  test_parallel_utils.py  test_pipelines.py  test_recovery_manager.py  test_reward_config.py  test_rewards.py  test_ship_combat.py  test_ship_physics.py  test_training_integration.py  test_utils.py  test_validator.py  test_yemong.py  test_yemong_dynamics.py  test_yemong_interleaved.py  test_yemong_logging_benchmark.py  test_yemong_logging_correctness.py  test_yemong_pretraining_loop.py  (+1 more)
(+435 files in other folders)
