[project]
name = "boost-and-broadside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "pacmap>=0.8.0",
    "pygame>=2.6.1",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "ruff>=0.14.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
