[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boost-and-broadside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.0.0",
    "pygame>=2.6.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.10.0",
    "wandb>=0.22.2",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "pytest-tap>=3.4",
]
